--- a/games.yml
+++ b/games.yml
@@ -40,6 +40,7 @@ ps4:
   - CUSA09032_00 # Yakuza 6
   - CUSA00003_00 # Driveclub
   - CUSA00900_00 # Bloodborne
+  - CUSA08809_00 # Shadow of the Colossus
 ps3:
 
 vita:
